# floral-notepaper

./: .gitignore  package-lock.json  package.json
src/: App.css
src-tauri/: Cargo.toml
src-tauri/src/: desktop.rs  lib.rs
src-tauri/src/services/: notes.rs
src-tauri/src/updater/: check.rs  commands.rs  download.rs  errors.rs  helper.rs  install.rs  manifest.rs  mod.rs  platform.rs  settings.rs  state.rs  types.rs  version.rs
src/components/: AboutPanel.test.tsx  AboutPanel.tsx  MainWindow.tsx  NotePad.test.tsx  NotePad.tsx  SettingsPanel.tsx  Tile.tsx  TileShowcase.test.tsx  Undo.ts  indent.ts
src/features/markdown/: MarkdownPreview.tsx
src/features/update/: UpdateSettingsSection.test.tsx  UpdateSettingsSection.tsx  api.test.ts  api.ts  types.ts  updateErrors.ts
src/locales/: test-setup.ts
src/locales/en-US/: translation.json
src/locales/zh-CN/: translation.json
src/locales/zh-HK/: translation.json
